--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,3 +5,17 @@ html, body {
   width: 100%;
   height: 100%;
 }
+
+.pop-up {
+  width :250px;
+  height:100px;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  visibility: hidden;
+}
+
+.pop-up-text {
+
+}
