--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@ html, body {
   height: 100%;
 }
 
+
 .pop-up {
   width :250px;
   height:100px;
@@ -34,4 +35,15 @@ html, body {
 
 .second-motion.visible {
   top: 100%;
+}
+
+.circleDiv {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  border-radius: 50%;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  
 }
