--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,5 +73,15 @@ html, body {
   background-color: rgb(151, 77, 92);
   position: absolute;
   top: 35%;
-  left: -750px; /* Initial position off the left of the screen */
+  left: -750px; 
 }
+
+.fourth-motion {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(198, 246, 183);
+  position: absolute;
+  left: 100%; /* Initially off the screen to the left */
+  transition: left 0.2s ease-in-out;
+}
+
