--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,3 +85,11 @@ html, body {
   transition: left 0.2s ease-in-out;
 }
 
+.circle-fade {
+  width:50px;
+  height:50px;
+  border-radius: 50px;
+  background-color:rgb(189, 139, 236);
+  position: absolute;
+}
+
