--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,10 +86,12 @@ html, body {
 }
 
 .circle-fade {
-  width:50px;
-  height:50px;
-  border-radius: 50px;
-  background-color:rgb(189, 139, 236);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0); /* Start with transparent background */
   position: absolute;
+  transform-origin: center;
+  opacity: 0; /* Start fully transparent */
 }
 
