--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,7 +82,7 @@ html, body {
   height: 100%;
   background-color: rgb(198, 246, 183);
   position: absolute;
-  left: 100%; /* Initially off the screen to the left */
+  left: 100%; 
   transition: left 0.2s ease-in-out;
 }
 
@@ -90,10 +90,10 @@ html, body {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background: rgba(0, 0, 0, 0); /* Start with transparent background */
+  background: rgba(0, 0, 0, 0); 
   position: absolute;
   transform-origin: center;
-  opacity: 0; /* Start fully transparent */
+  opacity: 0; 
 }
 
 
@@ -103,7 +103,7 @@ html, body {
   position: absolute;
   top: 0;
   width: 100px;
-  height: 100vh; /* Full viewport height */
+  height: 100vh; 
 }
 
 .zigzag-left {
@@ -111,7 +111,7 @@ html, body {
 }
 
 .zigzag-right {
-  left: 80%; /* Align to the right instead of 'left: 80%' */
+  left: 80%; 
 }
 
 .vertical-zigzag {
