added last animation

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,5 +141,14 @@ html, body {
 }
 
 
+.line-animation {
+  width: 750px;
+  height: 50px;
+  background-color: rgb(69, 216, 194);
+  position: absolute;
+  top: 45%;
+  left: -750px;
+}
+
 
 
